--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -50,6 +50,7 @@ templ Layout(title string) {
 		@component.Body(templ.Attributes{}) {
 			{ children... }
 			<script src="https://unpkg.com/htmx.org@2.0.0"></script>
+			<script src="/static/js/sportix.js"></script>
 			@component.Footer(templ.Attributes{})
 		}
 	}
